WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
152300
[WinCairo][MediaFoundation] Full screen mode is not supported.
https://bugs.webkit.org/show_bug.cgi?id=152300
Summary
[WinCairo][MediaFoundation] Full screen mode is not supported.
peavo
Reported
2015-12-15 07:30:57 PST
We need to let WebCore know that MediaFoundation supports full screen mode.
Attachments
Patch
(2.14 KB, patch)
2015-12-15 07:36 PST
,
peavo
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
peavo
Comment 1
2015-12-15 07:36:33 PST
Created
attachment 267369
[details]
Patch
peavo
Comment 2
2015-12-15 11:17:35 PST
Committed
r194111
: <
http://trac.webkit.org/changeset/194111
>.
peavo
Comment 3
2015-12-15 11:31:11 PST
Thanks for reviewing :)
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug