[WinCairo][MediaFoundation] Full screen mode is not supported. https://bugs.webkit.org/show_bug.cgi?id=152300

Reviewed by Darin Adler.

We need to let WebCore know MediaFoundation supports full screen mode.

* platform/graphics/win/MediaPlayerPrivateMediaFoundation.cpp:
(WebCore::MediaPlayerPrivateMediaFoundation::pause):
(WebCore::MediaPlayerPrivateMediaFoundation::supportsFullscreen):
(WebCore::MediaPlayerPrivateMediaFoundation::naturalSize):
* platform/graphics/win/MediaPlayerPrivateMediaFoundation.h:


Canonical link: https://commits.webkit.org/170416@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194111 268f45cc-cd09-0410-ab3c-d52691b4dbfc